# holobench

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  scratchpad-beats.jsonl
backend/: pyproject.toml
backend/holobench/: __init__.py  cli.py
backend/holobench/api/: __init__.py  app.py
backend/holobench/auth/: __init__.py  crypto.py  service.py  store.py
backend/holobench/bridges/: __init__.py  console.py
backend/holobench/labs/: __init__.py  coordinator.py  loader.py  models.py
backend/holobench/profiles/: __init__.py  loader.py  models.py
backend/holobench/session/: __init__.py  command.py  control.py  isolation.py  manager.py
backend/holobench/setup/: __init__.py  container_build.py  manager.py
backend/tests/: test_api_hardening.py  test_auth.py  test_isolation.py  test_labs.py  test_profiles_and_command.py  test_reservation.py  test_scaling.py  test_setup.py
docker/: .dockerignore  Dockerfile  Dockerfile.buildme  Dockerfile.multi  Dockerfile.nxp-bsp  build-multi.sh  build.sh  compose.yaml  nxp-bsp-entrypoint.sh
docs/: ARCHITECTURE.md  BOARD_PROFILES.md  DEPLOY.md  SCALING.md  SETUP.md  TOPOLOGIES.md  build-wizard-redesign.md  wizard-prototype.html
frontend/: index.html
labs/: can-link-91-mcx.yaml  can-link-91.yaml  can-link-93-mcx.yaml  can-link-95-mcx.yaml  eth-pair.yaml  gateway-lab-91.yaml  gateway-lab.yaml  i2c-link-91.yaml  i2c-link-93.yaml  lan-trio.yaml  mcx-rt1180-95-l2.yaml  mcx93-eth.yaml  spi-link-91-mcx.yaml  spi-link-91.yaml  spi-link-93-mcx.yaml  spi-link-95-mcx.yaml  uart-link-91-rt1180.yaml  uart-link-91.yaml  (+2 more)
(+48 files in other folders)
